# prickly-zsh-theme

./: .gitignore  CMakeLists.txt  config.h  main.cpp  prickly.zsh-theme
